--- a/src/components/welcome/WelcomePage.module.scss
+++ b/src/components/welcome/WelcomePage.module.scss
@@ -2,16 +2,18 @@
   flex-grow: 1;
   display: flex;
   flex-direction: column;
+  margin-bottom: 90px;
   > .card {
     flex-grow: 1;
     background: var(--welcome-card-bg);
     border-radius: 16px;
     border: 1px solid rgba(112, 112, 112, 1);
-    margin:20px 16px 0;
+    margin: 20px 16px 0;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
+
     > img {
 
     }
@@ -25,14 +27,21 @@
   }
 
   > .actions {
+    position: fixed;
+    left: 0;
+    bottom: 0;
+    z-index: var(--z-index-bottom-nav);
+    background: var(--welcome-bg-color-end);
+    width: 100%;
     display: flex;
     justify-content: space-between;
     align-items: center;
-    margin:20px 16px 20px 16px;
+    padding: 20px 16px;
     font-size: 32px;
     font-weight: 700;
     color: var(--welcome-text-color);
-    > .fake{
+
+    > .fake {
       visibility: hidden;
     }
   }
