--- a/src/views/Welcome.module.scss
+++ b/src/views/Welcome.module.scss
@@ -2,7 +2,7 @@
   height: 100vh;
   display: flex;
   flex-direction: column;
-  background: linear-gradient(180deg, rgba(92, 51, 190, 1) 0%, rgba(143, 76, 215, 1) 100%);
+  background: linear-gradient(180deg, var(--welcome-bg-color-start) 0%, var(--welcome-bg-color-end) 100%);
   >header{
     flex-shrink: 0;
     display: flex;
