--- a/src/views/Welcome.module.scss
+++ b/src/views/Welcome.module.scss
@@ -15,13 +15,31 @@
       font-weight: 700;
       color: rgba(212, 212, 238, 1);
     }
-    &:hover{
-    }
   }
   >.main{
     flex-grow: 1;
     display: flex;
     flex-direction: column;
     justify-content: center;
+    position: relative;
   }
+  >.footer {
+    flex-shrink: 0;
+  }
+}
+.slide_fade_enter_active,
+.slide_fade_leave_active {
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  transition: all 0.5s ease-out;
+}
+
+.slide_fade_enter_from {
+  transform: translateX(100vw);
+}
+.slide_fade_leave_to {
+  transform: translateX(-100vw);
 }
