--- a/src/components/welcome/WelcomeLayout.module.scss
+++ b/src/components/welcome/WelcomeLayout.module.scss
@@ -1,19 +1,13 @@
-.wrapper {
-  flex-grow: 1;
-  display: flex;
-  flex-direction: column;
-  margin-bottom: 90px;
-  > .card {
+.card {
     flex-grow: 1;
     background: var(--welcome-card-bg);
     border-radius: 16px;
     border: 1px solid rgba(112, 112, 112, 1);
-    margin: 20px 16px 0;
     display: flex;
+    margin: 20px 16px 90px 16px;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-
     > img {
 
     }
@@ -26,7 +20,7 @@
     }
   }
 
-  > .actions {
+.actions {
     position: fixed;
     left: 0;
     bottom: 0;
@@ -45,4 +39,3 @@
       visibility: hidden;
     }
   }
-}
