调整滑动main会变大的问题

--- a/src/views/Welcome.module.scss
+++ b/src/views/Welcome.module.scss
@@ -22,6 +22,7 @@
     flex-direction: column;
     justify-content: center;
     position: relative;
+    margin: 20px 16px 100px 16px;
   }
   >.footer {
     flex-shrink: 0;
