--- a/src/components/welcome/WelcomeLayout.module.scss
+++ b/src/components/welcome/WelcomeLayout.module.scss
@@ -4,7 +4,6 @@
     border-radius: 16px;
     border: 1px solid rgba(112, 112, 112, 1);
     display: flex;
-    margin: 20px 16px 90px 16px;
     flex-direction: column;
     justify-content: center;
     align-items: center;
@@ -27,6 +26,7 @@
     z-index: var(--z-index-bottom-nav);
     background: var(--welcome-bg-color-end);
     width: 100%;
+    height: 100px;
     display: flex;
     justify-content: space-between;
     align-items: center;
