封装 useSwipe Hook

--- a/src/views/Welcome.module.scss
+++ b/src/views/Welcome.module.scss
@@ -1,22 +1,30 @@
-.wrapper{
+.wrapper {
   height: 100vh;
   display: flex;
   flex-direction: column;
   background: linear-gradient(180deg, var(--welcome-bg-color-start) 0%, var(--welcome-bg-color-end) 100%);
-  >header{
+
+  > header {
     flex-shrink: 0;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     padding-top: 40px;
-    >h1{
+
+    > h1 {
       font-size: 32px;
       font-weight: 700;
       color: rgba(212, 212, 238, 1);
     }
+
+    > svg {
+      width: 64px;
+      height: 69px;
+    }
   }
-  >.main{
+
+  > .main {
     flex-grow: 1;
     display: flex;
     flex-direction: column;
@@ -24,10 +32,12 @@
     position: relative;
     margin: 20px 16px 100px 16px;
   }
-  >.footer {
+
+  > .footer {
     flex-shrink: 0;
   }
 }
+
 .slide_fade_enter_active,
 .slide_fade_leave_active {
   position: absolute;
@@ -41,6 +51,7 @@
 .slide_fade_enter_from {
   transform: translateX(100vw);
 }
+
 .slide_fade_leave_to {
   transform: translateX(-100vw);
 }
