--- a/src/components/welcome/WelcomeLayout.module.scss
+++ b/src/components/welcome/WelcomeLayout.module.scss
@@ -1,41 +1,43 @@
 .card {
-    flex-grow: 1;
-    background: var(--welcome-card-bg);
-    border-radius: 16px;
-    border: 1px solid rgba(112, 112, 112, 1);
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    > img {
+  flex-grow: 1;
+  background: var(--welcome-card-bg);
+  border-radius: 16px;
+  border: 1px solid rgba(112, 112, 112, 1);
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 
-    }
-
-    > p {
-      margin-top: 40px;
-      text-align: center;
-      font-size: 32px;
-      font-weight: 400;
-    }
+  > p {
+    margin-top: 40px;
+    text-align: center;
+    font-size: 32px;
+    font-weight: 400;
   }
+
+  > svg {
+    width: 128px;
+    height: 130px;
+  }
+}
 
 .actions {
-    position: fixed;
-    left: 0;
-    bottom: 0;
-    z-index: var(--z-index-bottom-nav);
-    background: var(--welcome-bg-color-end);
-    width: 100%;
-    height: 100px;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 20px 16px;
-    font-size: 32px;
-    font-weight: 700;
-    color: var(--welcome-text-color);
+  position: fixed;
+  left: 0;
+  bottom: 0;
+  z-index: var(--z-index-bottom-nav);
+  background: var(--welcome-bg-color-end);
+  width: 100%;
+  height: 100px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 20px 16px;
+  font-size: 32px;
+  font-weight: 700;
+  color: var(--welcome-text-color);
 
-    > .fake {
-      visibility: hidden;
-    }
+  > .fake {
+    visibility: hidden;
   }
+}
