--- a/src/assets/stylesheets/helper.scss
+++ b/src/assets/stylesheets/helper.scss
@@ -8,4 +8,5 @@ $font-kai: Baskerville, Georgia, "Liberation Serif", "Kaiti SC", STKaiti, "AR PL
   --z-index-bottom-nav:1;
   --welcome-bg-color-start:rgba(92, 51, 190, 1);
   --welcome-bg-color-end:rgba(143, 76, 215, 1);
+  --welcome-animation-transition:0.5s;
 }
