--- a/src/assets/stylesheets/helper.scss
+++ b/src/assets/stylesheets/helper.scss
@@ -9,4 +9,9 @@ $font-kai: Baskerville, Georgia, "Liberation Serif", "Kaiti SC", STKaiti, "AR PL
   --welcome-bg-color-start:rgba(92, 51, 190, 1);
   --welcome-bg-color-end:rgba(143, 76, 215, 1);
   --welcome-animation-transition:0.5s;
+  --button-bg: rgba(92, 51, 190, 1);
+  --button-text:white;
+  --button-font-size:18px;
+  --button-border-radius:8px;
+  --button-height:48px;
 }
