--- a/src/assets/stylesheets/helper.scss
+++ b/src/assets/stylesheets/helper.scss
@@ -21,4 +21,6 @@ $font-kai: Baskerville, Georgia, "Liberation Serif", "Kaiti SC", STKaiti, "AR PL
   --overlay-mask-bg: rgba(0, 0, 0, 0.5);
   --overlay-bg: white;
   --top-safe-area-height: 24px;
+  --currentUser-bg: rgba(92, 51, 190, 1);
+  --currentUser-p-color: rgba(206, 161, 255, 1);
 }
