--- a/src/shared/Overlay.module.scss
+++ b/src/shared/Overlay.module.scss
@@ -14,6 +14,33 @@
   z-index: calc(var(--z-index-overlay) + 1);
   top:var(--top-safe-area-height);
   left: 0;
-  width: 60%;
+  width: 70%;
   height: 100%;
+}
+.currentUser{
+  display: flex;
+  flex-direction: column;
+  padding: 32px 0 40px 16px;
+  background: var(--currentUser-bg);
+  > h2{
+    font-size: 24px;
+    color: white;
+  }
+  > p{
+    font-size: 16px;
+    color: var(--currentUser-p-color);
+  }
+}
+.action{
+  display: flex;
+  align-items: center;
+  height: 32px;
+  margin: 40px 0 20px 16px;
+  > .icon{
+    width: 32px;
+    margin-right: 16px;
+  }
+  > p{
+    font-size: 24px;
+  }
 }
