--- a/src/assets/stylesheets/helper.scss
+++ b/src/assets/stylesheets/helper.scss
@@ -23,4 +23,7 @@ $font-kai: Baskerville, Georgia, "Liberation Serif", "Kaiti SC", STKaiti, "AR PL
   --top-safe-area-height: 24px;
   --currentUser-bg: rgba(92, 51, 190, 1);
   --currentUser-p-color: rgba(206, 161, 255, 1);
+  --tabs-li-color:white;
+  --tabs-bg-color:rgba(143, 76, 215, 1);
+  --tabs-li-selected:rgba(255, 255, 255, 0.5);
 }
