--- a/src/shared/Tabs.module.scss
+++ b/src/shared/Tabs.module.scss
@@ -1,10 +1,32 @@
 .tabs {
   &_nav {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    text-align: center;
+    background: var(--tabs-bg-color);
     > li {
+      flex-grow: 1;
+      flex-shrink: 0;
+      color: var(--tabs-li-color);
+      padding: 12px 0;
       &.selected {
-        background: blueviolet;
+        position: relative;
+        &::after{
+          content: '';
+          display: block;
+          position: absolute;
+          left: 0;
+          bottom: 0;
+          width: 100%;
+          height: 3px;
+          background: var(--tabs-li-selected);
+        }
       }
     }
   }
+}
+.tab{
+
 }
 
