--- a/src/assets/stylesheets/helper.scss
+++ b/src/assets/stylesheets/helper.scss
@@ -26,4 +26,5 @@ $font-kai: Baskerville, Georgia, "Liberation Serif", "Kaiti SC", STKaiti, "AR PL
   --tabs-li-color:white;
   --tabs-bg-color:rgba(143, 76, 215, 1);
   --tabs-li-selected:rgba(255, 255, 255, 0.5);
+  --putput-border-color:rgba(221, 221, 221, 1);
 }
