重做数字键盘

--- a/src/assets/stylesheets/helper.scss
+++ b/src/assets/stylesheets/helper.scss
@@ -23,8 +23,10 @@ $font-kai: Baskerville, Georgia, "Liberation Serif", "Kaiti SC", STKaiti, "AR PL
   --top-safe-area-height: 24px;
   --currentUser-bg: rgba(92, 51, 190, 1);
   --currentUser-p-color: rgba(206, 161, 255, 1);
-  --tabs-li-color:white;
-  --tabs-bg-color:rgba(143, 76, 215, 1);
-  --tabs-li-selected:rgba(255, 255, 255, 0.5);
-  --putput-border-color:rgba(221, 221, 221, 1);
+  --tabs-li-color: white;
+  --tabs-bg-color: rgba(143, 76, 215, 1);
+  --tabs-li-selected: rgba(255, 255, 255, 0.5);
+  --putput-border-color: rgba(221, 221, 221, 1);
+  --button-bg-important: rgba(143, 76, 215, 1);
+  --button-text-color:white;
 }
