--- a/src/components/Items/InputPad.module.scss
+++ b/src/components/Items/InputPad.module.scss
@@ -4,16 +4,19 @@
   justify-content: space-between;
   align-items: center;
   height: 64px;
+
   .date {
     display: flex;
     justify-content: left;
     align-items: center;
     margin-left: 16px;
+
     > .icon {
       width: 24px;
       margin-right: 8px;
     }
-    > span{
+
+    > span {
       margin-top: 3px;
       color: #999;
       font-family: monospace;
@@ -29,24 +32,66 @@
 }
 
 .buttons {
-  display: flex;
-  flex-wrap: wrap;
+  display: grid;
+  grid-template-areas:
+"n1 n2 n3 d"
+"n4 n5 n6 d"
+"n7 n8 n9 s"
+"n0 n0 p s";
   border-top: 1px solid var(--putput-border-color);
+
   > button {
     border-right: 1px solid var(--putput-border-color);
     border-bottom: 1px solid var(--putput-border-color);
-    width: 25%;
     padding: 16px 0;
     text-align: center;
     color: #8F4CD7FF;
-    &:nth-child(4n){
-      border-right: none;
-    };
-    &:nth-child(13),
-    &:nth-child(14),
-    &:nth-child(15),
-    &:nth-child(16) {
-      border-bottom: none;
+
+    &:nth-child(1) {
+      grid-area: n1;
     }
+    &:nth-child(2) {
+      grid-area: n2;
+    }
+    &:nth-child(3) {
+      grid-area: n3;
+    }
+    &:nth-child(4) {
+      grid-area: n4;
+    }
+    &:nth-child(5) {
+      grid-area: n5;
+    }
+    &:nth-child(6) {
+      grid-area: n6;
+    }
+    &:nth-child(7) {
+      grid-area: n7;
+    }
+    &:nth-child(8) {
+      grid-area: n8;
+    }
+
+    &:nth-child(9) {
+      grid-area: n9;
+    }
+
+    &:nth-child(10) {
+      grid-area: n0;
+    }
+
+    &:nth-child(11) {
+      grid-area: p;
+    }
+
+    &:nth-child(12) {
+      grid-area: d;
+    }
+
+    &:nth-child(13) {
+      grid-area: s;
+      background: var(--button-bg-important);
+      color: var(--button-text-color);
     }
   }
+}
