--- a/src/assets/stylesheets/helper.scss
+++ b/src/assets/stylesheets/helper.scss
@@ -29,4 +29,9 @@ $font-kai: Baskerville, Georgia, "Liberation Serif", "Kaiti SC", STKaiti, "AR PL
   --putput-border-color: rgba(221, 221, 221, 1);
   --button-bg-important: rgba(143, 76, 215, 1);
   --button-text-color:white;
+  --error-color: #E10505;
+  --input-border-color:#5c33be;
+  --input-radius:8px;
+  --emoji-nav-text:#999;
+  --emoji-nav-text-selected:#333;
 }
