--- a/src/assets/stylesheets/helper.scss
+++ b/src/assets/stylesheets/helper.scss
@@ -28,10 +28,12 @@ $font-kai: Baskerville, Georgia, "Liberation Serif", "Kaiti SC", STKaiti, "AR PL
   --tabs-li-selected: rgba(255, 255, 255, 0.5);
   --putput-border-color: rgba(221, 221, 221, 1);
   --button-bg-important: rgba(143, 76, 215, 1);
-  --button-text-color:white;
+  --button-text-color: white;
   --error-color: #E10505;
-  --input-border-color:#5c33be;
-  --input-radius:8px;
-  --emoji-nav-text:#999;
-  --emoji-nav-text-selected:#333;
+  --input-border-color: #5c33be;
+  --input-radius: 8px;
+  --emoji-nav-text: #999;
+  --emoji-nav-text-selected: #333;
+  --tag-bg: #efefef;
+  --main: rgba(92, 51, 190, 1);
 }
