--- a/src/shared/Tabs.module.scss
+++ b/src/shared/Tabs.module.scss
@@ -1,5 +1,9 @@
 .tabs {
+  position: relative;
   &_nav {
+    position: sticky;
+    z-index: 1;
+    top: 0;
     display: flex;
     justify-content: space-between;
     align-items: center;
