完成TagEdit.tsx页面样式

--- a/src/shared/Button.module.scss
+++ b/src/shared/Button.module.scss
@@ -7,4 +7,10 @@
   border-radius: var(--button-border-radius);
   text-align: center;
   height: var(--button-height);
+  &.normal{}
+  &.important{}
+  &.dangerous{
+    background: var(--button-bg-dangerous);
+    border-color: var(--button-bg-dangerous);
+  }
 }
