完成ItemList.tsx页面样式

--- a/src/App.scss
+++ b/src/App.scss
@@ -8,3 +8,11 @@ body {
   font-family: $font-hei;
   line-height: 1.5;
 }
+.bill_tabs_nav{
+  justify-content: flex-start;
+  & > &_item{
+    flex-grow: 0;
+    padding-left: 16px;
+    padding-right: 16px;
+  }
+}
