--- a/src/assets/stylesheets/helper.scss
+++ b/src/assets/stylesheets/helper.scss
@@ -11,7 +11,7 @@ $font-kai: Baskerville, Georgia, "Liberation Serif", "Kaiti SC", STKaiti, "AR PL
   --welcome-bg-color-end: rgba(143, 76, 215, 1);
   --welcome-animation-transition: 0.5s;
   --button-bg: rgba(92, 51, 190, 1);
-  --button-bg-dangerous:rgba(190, 51, 51, 1);
+  --button-bg-dangerous: rgba(190, 51, 51, 1);
   --button-text: white;
   --button-font-size: 18px;
   --button-border-radius: 8px;
@@ -37,4 +37,10 @@ $font-kai: Baskerville, Georgia, "Liberation Serif", "Kaiti SC", STKaiti, "AR PL
   --emoji-nav-text-selected: #333;
   --tag-bg: #efefef;
   --main: rgba(92, 51, 190, 1);
+  --item-total-bg: rgba(37, 42, 67, 1);
+  --item-total-income: rgba(254, 114, 117, 1);
+  --item-total-expenses: rgba(83, 168, 103, 1);
+  --bottom-border-color: rgba(238, 238, 238, 1);
+  --tag-bg: rgba(239, 239, 239, 1);
+  --list-time-color: rgba(153, 153, 153, 1);
 }
