--- a/src/components/Items/ItemList.module.scss
+++ b/src/components/Items/ItemList.module.scss
@@ -1,6 +1,20 @@
 .menu{
   fill: var(--navbar-color);
 }
-.bill{
-
+.overlay{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border:1px solid red;
+  background: var(--overlay-mask-bg);
+  &_inner{
+    background: var(--overlay-bg);
+    width: 80vw;
+    > header{
+      background: var(--main);
+      color: var(--button-text-color);
+      padding: 12px 16px;
+    }
+    > main{}
+  }
 }
