--- a/src/assets/stylesheets/helper.scss
+++ b/src/assets/stylesheets/helper.scss
@@ -43,4 +43,6 @@ $font-kai: Baskerville, Georgia, "Liberation Serif", "Kaiti SC", STKaiti, "AR PL
   --bottom-border-color: rgba(238, 238, 238, 1);
   --tag-bg: rgba(239, 239, 239, 1);
   --list-time-color: rgba(153, 153, 153, 1);
+  --input-min-height: 48px;
+  --input-shadow: rgba(0, 0, 0, 0.5);
 }
