--- a/src/components/Items/Tag/Tag.module.scss
+++ b/src/components/Items/Tag/Tag.module.scss
@@ -1,41 +1,8 @@
-.form {
-  padding: 16px;
-
-  > .formRow {
-    margin-top: 8px;
-
-    > .tips {
-      text-align: center;
-      padding-top: 16px;
-      padding-bottom: 10px;
-    }
-
-    > .button {
-      width: 100%;
-    }
-  }
+.tips {
+  text-align: center;
+  padding-top: 16px;
+  padding-bottom: 10px;
 }
-
-.formItem {
-  &_name {
-    font-size: 18px;
-  }
-
-  &_value {
-    display: flex;
-    margin-top: 4px;
-    border: 1px solid rgba(92, 51, 190, 1);
-    border-radius: 6px;
-    padding: 4px 10px;
-  }
-
-  &_errorHint {
-    color: var(--error-color);
-    font-size: 12px;
-    margin-top: 4px;
-  }
-}
-
 .actions {
   padding:0 16px 32px 16px;
   display: flex;
@@ -43,4 +10,7 @@
   .removeTag,.removeTagAndItem{
     width: calc(50% - 8px);
   }
+}
+.button{
+  width: 100%;
 }
