--- a/src/shared/Form.module.scss
+++ b/src/shared/Form.module.scss
@@ -25,7 +25,7 @@
     font-size: 18px;
     padding-left: 16px;
     padding-right: 16px;
-    box-shadow: inset 0 0 3px var(--input-shadow);
+    //box-shadow: inset 0 0 3px var(--input-shadow);
 
     &.error {
       border-color: var(--error-color);
