--- a/src/shared/Overlay.module.scss
+++ b/src/shared/Overlay.module.scss
@@ -16,6 +16,10 @@
   left: 0;
   width: 70%;
   height: 100%;
+  color: var(--text);
+}
+.menu{
+  fill: var(--navbar-color);
 }
 .currentUser{
   display: flex;
