完成登录界面样式

--- a/src/shared/Form.module.scss
+++ b/src/shared/Form.module.scss
@@ -13,7 +13,7 @@
 .formItem {
   min-height: var(--input-min-height);
   max-width: 100%;
-
+  //color: #999999;
   &.button {
     width: 100%;
   }
@@ -26,6 +26,11 @@
     padding-left: 16px;
     padding-right: 16px;
     //box-shadow: inset 0 0 3px var(--input-shadow);
+    &.validationCodeInput {
+      flex-grow: 0;
+      width: 8em;
+      margin-right: 16px;
+    }
 
     &.error {
       border-color: var(--error-color);
@@ -38,7 +43,8 @@
   &_value {
     display: flex;
     margin-top: 4px;
-    > *{
+
+    > * {
       flex-grow: 1;
     }
   }
