--- a/src/assets/stylesheets/helper.scss
+++ b/src/assets/stylesheets/helper.scss
@@ -9,7 +9,7 @@ $font-kai: Baskerville, Georgia, "Liberation Serif", "Kaiti SC", STKaiti, "AR PL
   --z-index-bottom-nav: 8;
   --z-index-overlay: 16;
   --z-index-navbar: 32;
-  --van-overlay-z-index: 64;
+  --van-overlay-z-index: 64 !important;
   --welcome-bg-color-start: rgba(92, 51, 190, 1);
   --welcome-bg-color-end: rgba(143, 76, 215, 1);
   --welcome-animation-transition: 0.5s;
