--- a/src/shared/Form.module.scss
+++ b/src/shared/Form.module.scss
@@ -22,6 +22,16 @@ input::placeholder {
     width: 100%;
   }
 
+  &.select {
+    border: 1px solid var(--input-border-color);
+    border-radius: var(--input-radius);
+    padding: 0 8px;
+    flex-grow: 0;
+    width: 132px;
+    height: 36px;
+    line-height: 3em;
+  }
+
   &.input {
     flex-grow: 1;
     border: 1px solid var(--input-border-color);
