--- a/src/shared/Form.module.scss
+++ b/src/shared/Form.module.scss
@@ -28,8 +28,9 @@ input::placeholder {
     padding: 0 8px;
     flex-grow: 0;
     width: 132px;
-    height: 36px;
     line-height: 3em;
+    margin-left: 8px;
+    margin-bottom: 16px;
   }
 
   &.input {
