粉装图表组件

--- a/src/assets/stylesheets/helper.scss
+++ b/src/assets/stylesheets/helper.scss
@@ -38,7 +38,6 @@ $font-kai: Baskerville, Georgia, "Liberation Serif", "Kaiti SC", STKaiti, "AR PL
   --input-radius: 8px;
   --emoji-nav-text: #999;
   --emoji-nav-text-selected: #333;
-  --tag-bg: #efefef;
   --main: rgba(92, 51, 190, 1);
   --item-total-bg: rgba(37, 42, 67, 1);
   --item-total-income: rgba(254, 114, 117, 1);
@@ -48,4 +47,7 @@ $font-kai: Baskerville, Georgia, "Liberation Serif", "Kaiti SC", STKaiti, "AR PL
   --list-time-color: rgba(153, 153, 153, 1);
   --input-min-height: 48px;
   --input-shadow: rgba(0, 0, 0, 0.5);
+  --input-placeholder: #999;
+  --charts-bar-text: #999;
+  --bar-bg: rgba(204, 204, 204, 1);
 }
