--- a/src/shared/Button.module.scss
+++ b/src/shared/Button.module.scss
@@ -7,6 +7,10 @@
   border-radius: var(--button-border-radius);
   text-align: center;
   height: var(--button-height);
+  &[disabled]{
+    opacity: 0.5;
+    cursor: not-allowed;
+  }
   &.normal{}
   &.important{}
   &.dangerous{
