--- a/src/shared/Overlay.module.scss
+++ b/src/shared/Overlay.module.scss
@@ -7,7 +7,11 @@
   width: 100%;
   height: 100%;
 }
-
+.email{
+  width: 100%;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
 .overlay {
   position: fixed;
   background: var(--overlay-bg);
