每次切换tab重新渲染图表

--- a/src/assets/stylesheets/helper.scss
+++ b/src/assets/stylesheets/helper.scss
@@ -5,7 +5,7 @@ $font-kai: Baskerville, Georgia, "Liberation Serif", "Kaiti SC", STKaiti, "AR PL
 :root {
   --welcome-card-bg: white;
   --welcome-text-color: white;
-  --text: #333;
+  --text: rgb(51, 51, 51);
   --z-index-bottom-nav: 8;
   --z-index-overlay: 16;
   --z-index-navbar: 32;
