--- a/src/shared/Overlay.module.scss
+++ b/src/shared/Overlay.module.scss
@@ -2,53 +2,62 @@
   position: fixed;
   background: var(--overlay-mask-bg);
   z-index: var(--z-index-overlay);
-  top:var(--top-safe-area-height);
+  top: var(--top-safe-area-height);
   left: 0;
   width: 100%;
   height: 100%;
 }
-.email{
+
+.email {
   width: 100%;
   overflow: hidden;
   text-overflow: ellipsis;
 }
+
 .overlay {
   position: fixed;
   background: var(--overlay-bg);
   z-index: calc(var(--z-index-overlay) + 1);
-  top:var(--top-safe-area-height);
+  top: var(--top-safe-area-height);
   left: 0;
   width: 70%;
   height: 100%;
   color: var(--text);
 }
-.menu{
+
+.menu {
   fill: var(--navbar-color);
 }
-.currentUser{
+
+.currentUser {
   display: flex;
   flex-direction: column;
   padding: 32px 0 40px 16px;
   background: var(--currentUser-bg);
-  > h2{
+
+  h2 {
     font-size: 24px;
     color: white;
   }
-  > p{
+
+  p {
     font-size: 16px;
     color: var(--currentUser-p-color);
   }
 }
-.action{
+
+.action {
   display: flex;
   align-items: center;
   height: 32px;
   margin: 40px 0 20px 16px;
-  > .icon{
+
+  > .icon {
     width: 32px;
     margin-right: 16px;
   }
-  > p{
+
+  p {
     font-size: 24px;
   }
 }
